Fixed Images Not Showing
Fixed Background Images by moving asset folder to public. Also adjusted the Level Select so now there is a little preview image showing. But right now I am not really a big fan of how it looks.

--- a/src/style.css
+++ b/src/style.css
@@ -728,6 +728,14 @@ select {
   margin: 1.5rem;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -784,6 +792,10 @@ select {
   margin-right: 1.5rem;
 }
 
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .flex {
   display: flex;
 }
@@ -834,6 +846,14 @@ select {
 
 .h-14 {
   height: 3.5rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.h-5\/6 {
+  height: 83.333333%;
 }
 
 .min-h-screen {
@@ -894,6 +914,14 @@ select {
 
 .w-14 {
   width: 3.5rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-1\/12 {
+  width: 8.333333%;
 }
 
 .flex-1 {
@@ -1047,6 +1075,11 @@ select {
 
 .text-lg {
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
